# distil_xlstm

./: .gitignore  Makefile  README.md  create_distillation_dataset.py  demo_config.yaml  distillation_config.yaml  eval_ppl.py  figures.excalidraw  hello.py  inference-dummy-test.py  model_config.yaml  model_performance_comparison.ipynb  push-to-hub.py  pyproject.toml  toy.py  train-distillation.py  train.py  train_distil_xlstm.py  train_hf.py  train_xlstm.py  trainer_arguments.yaml  xlstm_config.yaml
.github/workflows/: ruff-format.yaml
configs/: distillation_dataset.yaml  train_config.yaml
configs/distillation/: datasets.yaml  models.yaml
configs/model/: SmolLM2-360M-Instruct.yaml  demo_config.yaml  distil_xlstm.yaml  distillation.yaml  xlstm.yaml
configs/trainer/: base.yaml  distillation.yaml
distil_xlstm/: __init__.py  config.py  create_distillation_dataset.py  data.py  distil_xlstm_config.py  modeling.py  text_generator.py  utils.py
distil_xlstm/modeling/: distil_xlstm_wrapper.py
distil_xlstm/optim/: __init__.py  callbacks.py  loss.py  scheduler.py
distil_xlstm/trainer/: __init__.py  arguments.py  dual_gpu_trainer.py  hub_model_trainer.py  kd_trainer.py  trainer_arguments.py  vanilla_trainer.py  xlstm_trainer.py
distil_xlstm_train/: train_distil.py
logs/: events.out.tfevents.1730109310.5a368b397d39.841.0
scripts/: config_export.py  create_distillation_dataset.sh  download_repo_snapshot.py  eval_ppl.py  train_distil_xlstm.py  train_distil_xlstm.sh  train_gemma2.sh  train_hf.py  train_qwen.sh  train_smollm.sh  train_xlstm.py
