[project]
name = "distil-xlstm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.0.1",
    "datasets>=3.0.1",
    "einops>=0.8.0",
    "evaluate>=0.4.3",
    "hydra-core>=1.3.2",
    "torch>=2.4.1",
    "transformers>=4.45.2",
    "trl>=0.11.4",
    "xlstm>=1.0.6",
]

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
]
