[project]
name = "distil-xlstm"
version = "0.1.0"
description = "Distil-xLSTM: Learning Attention Mechanisms through Recurrent Structures"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.0.1",
    "bitsandbytes>=0.44.1",
    "datasets>=3.0.1",
    "einops>=0.8.0",
    "evaluate>=0.4.3",
    "hydra-core>=1.3.2",
    "mlstm-kernels>=2.0.0",
    "safetensors>=0.4.5",
    "torch>=2.4.1",
    "transformers>=4.45.2",
    "trl>=0.11.4",
    "xlstm>=2.0.3",
]

[tool.uv]
dev-dependencies = [
    "tbparse>=0.0.9",
    "tensorboard>=2.18.0",
 "tensorboardx>=2.6.2.2",
]


[tool.setuptools.packages.find]
include = ["distil_xlstm"]
exclude = ["configs", "snapshots", "notebooks"]
